files/manifests/prometheus.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
