files/manifests/helm-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-controller
  namespace: kube-system
  labels:
    app: helm-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-controller
  template:
    metadata:
      labels:
        app: helm-controller
    spec:
      serviceAccountName: helm-controller-role
      containers:
        - name: helm-controller
          image: rancher/helm-controller:v0.12.1
          command: ["helm-controller"]
