files/manifests/local-backup.yml
---
# A toolbox environment for accessing local backups
apiVersion: apps/v1
kind: Deployment
metadata:
    name: local-backup-toolbox
spec:
    selector:
        matchLabels:
            app: local-backup-toolbox
    replicas: 1
    template:
        metadata:
            labels:
                app: local-backup-toolbox
        spec:
            containers:
              - name: local-backup-toolbox
                image: debian:buster
                command:
                  - /bin/bash
                  - -c
                  - >
                    apt-get update;
                    apt-get install -y borgbackup mariadb-client;
                    sleep 10000d
                volumeMounts:
                  - name: backups-volume
                    mountPath: /var/lib/backups/
                  - name: nextcloud-html-volume
                    mountPath: /mnt/nextcloud/var/www/html
            volumes:
              - name: nextcloud-html-volume
                persistentVolumeClaim:
                    claimName: nextcloud-files-pvc
                    readOnly: false
              - name: backups-volume
                persistentVolumeClaim:
                    claimName: local-backups-pvc
                    readOnly: false
