files/manifests/gitlab.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---
# manually exposed ingress for gitlab
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
    tls:
      - hosts:
          - gitlab.openelectronicslab.org
        secretName: gitlab-openelectronicslab-org-tls
    rules:
      - host: gitlab.openelectronicslab.org
        http:
            paths:
              - pathType: Prefix
                path: /
                backend:
                    service:
                        name: gitlab-chart-webservice-default
                        port:
                            number: 8181
---
# manually exposed ingress for registry.gitlab
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-gitlab-ingress
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
    tls:
      - hosts:
          - registry.gitlab.openelectronicslab.org
        secretName: registry-gitlab-openelectronicslab-org-tls
    rules:
      - host: registry.gitlab.openelectronicslab.org
        http:
            paths:
              - pathType: Prefix
                path: /
                backend:
                    service:
                        name: gitlab-chart-registry
                        port:
                            number: 5000
---
# manually exposed ingress for kas.gitlab
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kas-gitlab-ingress
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
    tls:
      - hosts:
          - kas.gitlab.openelectronicslab.org
        secretName: kas-gitlab-openelectronicslab-org-tls
    rules:
      - host: kas.gitlab.openelectronicslab.org
        http:
            paths:
              - pathType: Prefix
                path: /
                backend:
                    service:
                        name: gitlab-chart-kas
                        port:
                            number: 8150
              - pathType: Prefix
                path: /k8s-proxy/
                backend:
                    service:
                        name: gitlab-chart-kas
                        port:
                            number: 8154
---
# manually exposed ingress for minio.gitlab
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-gitlab-ingress
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
    tls:
      - hosts:
          - minio.gitlab.openelectronicslab.org
        secretName: minio-gitlab-openelectronicslab-org-tls
    rules:
      - host: minio.gitlab.openelectronicslab.org
        http:
            paths:
              - pathType: Prefix
                path: /
                backend:
                    service:
                        name: gitlab-chart-minio-svc
                        port:
                            number: 9000
